<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>ros2_medkit_gateway</name>
  <version>0.1.0</version>
  <description>HTTP gateway for ros2_medkit diagnostics system</description>

  <maintainer email="bartoszburda93@gmail.com">bburda</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>std_msgs</depend>
  <depend>std_srvs</depend>
  <depend>sensor_msgs</depend>
  <depend>rcl_interfaces</depend>
  <depend>action_msgs</depend>
  <depend>nlohmann-json-dev</depend>
  <depend>libcpp-httplib-dev</depend>
  <depend>yaml_cpp_vendor</depend>
  <exec_depend>rosidl_runtime_py</exec_depend>
  <exec_depend>rosidl_parser</exec_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>
  <test_depend>ament_cmake_clang_format</test_depend>
  <test_depend>ament_cmake_clang_tidy</test_depend>
  <test_depend>ament_cmake_gtest</test_depend>
  <test_depend>ament_cmake_pytest</test_depend>
  <test_depend>launch_testing_ament_cmake</test_depend>
  <test_depend>python3-requests</test_depend>
  <test_depend>rclcpp_action</test_depend>
  <test_depend>example_interfaces</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
