<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>ros2_medkit_serialization</name>
  <version>0.1.0</version>
  <description>Runtime JSON to ROS 2 message serialization library</description>
  <maintainer email="bartoszburda93@gmail.com">bburda</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>dynmsg</depend>
  <depend>rosidl_typesupport_introspection_cpp</depend>
  <depend>rosidl_runtime_cpp</depend>
  <depend>rcpputils</depend>
  <depend>yaml_cpp_vendor</depend>
  <depend>nlohmann-json-dev</depend>

  <test_depend>ament_cmake_gtest</test_depend>
  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>
  <test_depend>ament_cmake_clang_format</test_depend>
  <test_depend>ament_cmake_clang_tidy</test_depend>
  <test_depend>std_msgs</test_depend>
  <test_depend>std_srvs</test_depend>
  <test_depend>geometry_msgs</test_depend>
  <test_depend>sensor_msgs</test_depend>
  <test_depend>test_msgs</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
