# Copyright 2026 mfaferek93
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

cmake_minimum_required(VERSION 3.8)
project(ros2_medkit_vda5050_msgs)

if(CMAKE_COMPILER_IS_GNUCXX OR CMAKE_CXX_COMPILER_ID MATCHES "Clang")
  add_compile_options(-Wall -Wextra -Wpedantic)
endif()

find_package(ament_cmake REQUIRED)
find_package(rosidl_default_generators REQUIRED)
find_package(builtin_interfaces REQUIRED)

rosidl_generate_interfaces(${PROJECT_NAME}
  # Shared sub-messages (leaf types first, then composites)
  "msg/ActionParameter.msg"
  "msg/ErrorReference.msg"
  "msg/ControlPoint.msg"
  "msg/BoundingBoxReference.msg"
  "msg/LoadDimensions.msg"
  "msg/Trajectory.msg"
  "msg/NodePosition.msg"
  "msg/Action.msg"
  "msg/Node.msg"
  "msg/Edge.msg"
  "msg/ActionState.msg"
  "msg/NodeState.msg"
  "msg/EdgeState.msg"
  "msg/AgvPosition.msg"
  "msg/Velocity.msg"
  "msg/BatteryState.msg"
  "msg/SafetyState.msg"
  "msg/ErrorEntry.msg"
  "msg/InfoEntry.msg"
  "msg/Load.msg"
  "msg/HeaderId.msg"
  # Factsheet sub-types
  "msg/MaxStringLens.msg"
  "msg/MaxArrayLens.msg"
  "msg/Timing.msg"
  "msg/ProtocolLimits.msg"
  "msg/OptionalParameter.msg"
  "msg/AgvActionParameter.msg"
  "msg/AgvAction.msg"
  "msg/ProtocolFeatures.msg"
  "msg/TypeSpecification.msg"
  "msg/PhysicalParameters.msg"
  "msg/WheelPosition.msg"
  "msg/WheelDefinition.msg"
  "msg/Envelope2d.msg"
  "msg/Envelope3d.msg"
  "msg/AgvGeometry.msg"
  "msg/LoadSet.msg"
  "msg/LoadSpecification.msg"
  # Top-level messages (1:1 with MQTT topics)
  "msg/Order.msg"
  "msg/InstantActions.msg"
  "msg/State.msg"
  "msg/Visualization.msg"
  "msg/Connection.msg"
  "msg/Factsheet.msg"
  DEPENDENCIES builtin_interfaces
)

if(BUILD_TESTING)
  find_package(ament_lint_auto REQUIRED)
  ament_lint_auto_find_test_dependencies()
endif()

ament_package()
