<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>ros2_medkit_vda5050_msgs</name>
  <version>0.4.0</version>
  <description>VDA 5050 v2.0.0 message definitions for ROS 2. Vendor-neutral types matching the official VDA/VDMA specification.</description>

  <maintainer email="bartoszburda93@gmail.com">bburda</maintainer>
  <maintainer email="mfaferek93@gmail.com">mfaferek93</maintainer>
  <license>Apache-2.0</license>

  <url type="repository">https://github.com/selfpatch/ros2_medkit</url>
  <url type="website">https://github.com/VDA5050/VDA5050</url>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <buildtool_depend>rosidl_default_generators</buildtool_depend>

  <depend>builtin_interfaces</depend>

  <exec_depend>rosidl_default_runtime</exec_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <member_of_group>rosidl_interface_packages</member_of_group>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
