<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>ros2_medkit_linux_introspection</name>
  <version>0.4.0</version>
  <description>Linux introspection plugins for ros2_medkit gateway - procfs, systemd, and container</description>
  <maintainer email="bartoszburda93@gmail.com">bburda</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <buildtool_depend>ros2_medkit_cmake</buildtool_depend>

  <depend>ros2_medkit_gateway</depend>
  <depend>nlohmann-json-dev</depend>
  <depend>libsystemd-dev</depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_cmake_gtest</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
